@@ -153,7 +153,6 @@ namespace MeGUI
             this.codec = codec;
         }
         public static readonly AudioEncoderType LAME   = new AudioEncoderType("LAME", AudioCodec.MP3);
-        public static readonly AudioEncoderType AUDX   = new AudioEncoderType("AUDX", AudioCodec.MP3);
         public static readonly AudioEncoderType WAAC   = new AudioEncoderType("WAAC", AudioCodec.AAC);
         public static readonly AudioEncoderType NAAC   = new AudioEncoderType("NAAC", AudioCodec.AAC);
         public static readonly AudioEncoderType FAAC   = new AudioEncoderType("FAAC", AudioCodec.AAC);
@@ -202,7 +201,6 @@ namespace MeGUI
                 VideoEncoderTypes.Register(VideoEncoderType.XVID)))
                 throw new Exception("Failed to register a standard video encoder type");
             if (!(
-                AudioEncoderTypes.Register(AudioEncoderType.AUDX)   &&
                 AudioEncoderTypes.Register(AudioEncoderType.FAAC)   &&
                 AudioEncoderTypes.Register(AudioEncoderType.FFAC3)  &&
                 AudioEncoderTypes.Register(AudioEncoderType.FFMP2)  &&
