@@ -55,7 +55,6 @@ namespace MeGUI
         XmlInclude(typeof(MP2Settings)),
         XmlInclude(typeof(AC3Settings)), 
         XmlInclude(typeof(WinAmpAACSettings)), 
-        XmlInclude(typeof(AudXSettings)), 
         XmlInclude(typeof(NeroAACSettings)), 
         XmlInclude(typeof(MP3Settings)), 
         XmlInclude(typeof(FaacSettings)), 
