@@ -1,3 +1,4 @@
+1992 [AudX] removed audx encoder
 1991 [Snow] removed snow encoder
 1990 [MainForm] cosmetic change
 
